--- a/src/globalstyling.css
+++ b/src/globalstyling.css
@@ -9,7 +9,7 @@
     --color-secondary: #920de9;
     --color-secondary-accent: #920de90b;
     --color-shadow: #f4f4f4;
-    --color-table: #118bee;
+    --color-table: #d31f63;
     --color-text: #000;
     --color-text-secondary: #999;
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
