--- a/src/animals/style.css
+++ b/src/animals/style.css
@@ -33,3 +33,23 @@
     margin: 0;
 }
 
+.animal{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.animal img{
+    width: 100%;
+}
+
+.desc{
+    padding: 5px;
+}
+
+zoo-per-animal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
